COM, references, lisense and readme and first basic types
- ADD: LGPL license file
- ADD: readme file frm GitHub
- ADD: ITMObject interface and TNObject class
- CHG: all libraries have the same GuidAttribute value now
- ADD: basic assembly project references

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -41,9 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITNObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TNObject.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\LICENSE">
+      <Link>LICENSE</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\README.md">
+      <Link>README.md</Link>
+    </EmbeddedResource>
     <None Include="MarcelJoachimKloubert.CLRToolbox.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
