--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -50,6 +50,9 @@
     <Compile Include="Helpers\CollectionHelper.ToArray.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\StringHelper.AsString.cs">
+      <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\StringHelper.IsNullOrWhiteSpace.cs">
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
