winrt, notification object and fixes
- ADD: started to implement WinRT library
- ADD: NotificationObjectBase with .NET specific extensions
- FIX: assembly names and default namespaces

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /MarcelJoachimKloubert.CLRToolbox.45/bin
 
 /*.suo
+
+/MarcelJoachimKloubert.CLRToolbox.WinRT.80/obj
+/MarcelJoachimKloubert.CLRToolbox.WinRT.80/bin
