portable classes, virtual console and minor changes
- ADD: TMConsole class that provides logic for virtual console
- CHG: InotificationObject is partial now
- ADD: started to implement portable classes

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 
 /MarcelJoachimKloubert.CLRToolbox.WinRT.80/obj
 /MarcelJoachimKloubert.CLRToolbox.WinRT.80/bin
+/MarcelJoachimKloubert.CLRToolbox.20.TestConsole/obj
+/MarcelJoachimKloubert.CLRToolbox.20.TestConsole/bin
+
+/MarcelJoachimKloubert.CLRToolbox.Portable1/obj
+/MarcelJoachimKloubert.CLRToolbox.Portable1/bin
