--- a/MarcelJoachimKloubert.CLRToolbox.WinRT.80/MarcelJoachimKloubert.CLRToolbox.WinRT.80.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.WinRT.80/MarcelJoachimKloubert.CLRToolbox.WinRT.80.csproj
@@ -99,6 +99,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ITMObject.cs">
+      <Link>ITMObject.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
